sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort()
{
  var tri = false
  var cpt = 0
  while (tri = false)
  for (i<- 0 to getNombreValeurs()-2)
  {
    cpt = 0
    if (estPlusPetit(i,i+1))
    {
      echange(i,i+1)
      var cpt +=1
    }
  }
  if (cpt == 0)
  {
    tri = true
  }
  if (!tri)
  {
    cpt = 0
    for (i<- getNombreValeurs()-2 to 0)
   {
     if estplusPetit(i,i+1)
     {
       echange(i,i+1)
       cpt+=1
     }
   }
   if (cpt = 0)
   {
     tri = true
   }
  }
}